mule-user-guide/v/3.2/logic-filter.adoc
image:Filter-48x32.png[Filter-48x32]

= And/Or/Not Logic Filters

 +
*Purpose:* Allows filtering of messages using And/Or/Not logic expressions.

*Minimum Configuration:* None.

*Discussion:* Logic filters apply the And/Or/Not logic to one or more nested filters that they enclose. When you use these logic filters, you add nested filters to them from within the And/Or/Not-filter nested pane.

image:Add-filter.png[Add-filter]

Use the And Filter to combine two or more filters. The And Filter accepts the message and returns true only if all of its enclosed filters return true.

The Or Filter returns true if any of its enclosed child filters return true. That is, it accepts the message if the message matches the criteria of any of its filters.

The Not Filter inverts its enclosed filter. That is, the Not Filter accepts the message and returns true if the message does not match the filter criteria. For example, if the enclosed filter normally returns true for a specific message, when nested within the Not filter it returns false.

== Mule ESB Reference

* For more information about the And Filter, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/filters-configuration-reference[here].
* For more information about the Not Filter, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/filters-configuration-reference[here].
* For more information about the Or Filter, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/filters-configuration-reference[here].
